[project]
name = "kpyutils"
description = ""
authors = [
  {name = "devvythelopper"}
]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
version = "0.1.8b9"



[tool.poetry]
packages = [
  { include = "kpyutils" }
]


[tool.poetry.dependencies]
natsort = ">=8.4.0"
pyyaml = ">=6.0.0"
dateparser = ">=1.2.0"
tabulate = ">=0.9.0"



[tool.poetry.group.dev.dependencies]
debugpy = ">=1.8.14"
pytest = ">=8.3.5"
argparse-manpage = { path = "../argparse-manpage", develop = true } # "^4.7"
toml = ">=0.10.2"
dunamai = ">=1.0.0"

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
